# Chess-application

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  resources.qrc
architecture/: chess.drawio
src/UI/: MainWindow.cpp  MainWindow.h
src/UI/game_screen/: GameScreen.cpp  GameScreen.h
src/UI/home_screen/: HomeScreen.cpp  HomeScreen.h  StartScreen.cpp  StartScreen.h
src/UI/pieces/: ChessPiece.cpp  ChessPiece.h
